# Ray-Trace

./: .env.example  .gitignore  Dockerfile  README.md  README.pt-BR.md  conftest.py  docker-compose.yml  index.html  pyproject.toml
.github/workflows/: ci.yml
config/: environments.py  settings.py
data/: behaviors.json  packages.json  suites.csv  suites.json  timeline.json
data/test-cases/: 12d15341bee9bd06.json  17ef8d7cdf6a1ab1.json  1ac4b2ddb264714a.json  20465b08641034cb.json  2549a9362dd3b5a0.json  2f92a92f802c032c.json  340253a7a5c42344.json  3cb770c2c6b627a4.json  3e3ca5aec8883a97.json  3efb1ee813b0c461.json  4035a258da794596.json  472b69e119565b5.json  4e4b5fedb62cda36.json  501ee372fecb5117.json  524261091ad12d82.json  53268fa89c36dbf4.json  534bc78a796aad22.json  55b688b789ff9c55.json  57d1f04385095b0f.json  57ed9b085dacff4b.json  58be96aa0e07ff11.json  59002469f4bdf175.json  5d81a56f2745821e.json  5ff58bc06931103.json  70d2025ce96a4259.json  71aab3b1c95598fe.json  726bad2f6cc2f2a.json  7993cedc1e69b6f6.json  80c0dc3837935769.json  80e6e9468eb3b718.json  825ddf9e2c39a52a.json  858e3244101b51c3.json  8cbd0664f853370.json  8d0fe32bc380e8e.json  8ed1af3d719f880.json  8ef3ceb3f7a602eb.json  8fb6a5fdd627930.json  92bf9fd9c784027.json  (+32 more)
export/: influxDbData.txt  prometheusData.txt
fixtures/: __init__.py  auth.py  browsers.py  pages.py
history/: duration-trend.json  history.json
pages/: __init__.py  base_page.py  cart_page.py  checkout_complete_page.py  checkout_info_page.py  checkout_overview_page.py  inventory_page.py  login_page.py
tests/: conftest.py
utils/: __init__.py  allure_helpers.py  network_interceptor.py  retry_helper.py  screenshot_comparator.py
widgets/: severity.json  status-chart.json  suites.json  summary.json
(+17 files in other folders)
